--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
+
+<!--
+* FileName:index.html
+*Description:
+*This is the main code of the QRCodeList website.
+* @Author hujiahao
+* @Create 2023/7/27
+* @Version 1.0
+-->
+
 <!DOCTYPE html>
 <html>
 <head>
   <title>QRCodeList</title>
   <style>
+    .body {
+      font-family: "Arial Unicode MS", "Lucida Sans Unicode", sans-serif;
+    }
     .container {
       display: flex;
       flex-wrap: wrap;
@@ -43,7 +56,7 @@
 <body>
 <h1>QRCodeList</h1>
 <div class="container">
-  <a href="#" class="link"><img src="qrcode1.png"><span>Name 1</span></a>
+  <a href="#" class="link"><img src="qrcode1.png"><span>姓名</span></a>
   <a href="#" class="link"><img src="qrcode2.png"><span>Name 2</span></a>
   <a href="#" class="link"><img src="qrcode3.png"><span>Name 3</span></a>
   <a href="#" class="link"><img src="qrcode4.png"><span>Name 4</span></a>
