--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 <body>
 <h1>QRCodeList</h1>
 <div class="container">
-  <a href="#" class="link"><img src="qrcode1.png"><span>姓名</span></a>
+  <a href="#" class="link"><img src="images/111.jpg"><span>人力资源部中银研修中心</span></a>
   <a href="#" class="link"><img src="qrcode2.png"><span>Name 2</span></a>
   <a href="#" class="link"><img src="qrcode3.png"><span>Name 3</span></a>
   <a href="#" class="link"><img src="qrcode4.png"><span>Name 4</span></a>
