--- a/index.html
+++ b/index.html
@@ -51,41 +51,66 @@
       font-size: 18px;
       font-weight: bold;
     }
+
+    /* Lightbox styles */
+    .lightbox {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      z-index: 999;
+    }
+
+    .lightbox img {
+      max-width: 90%;
+      max-height: 90%;
+    }
   </style>
+  <!-- Lightbox2 library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
 </head>
 <body>
 <h1>QRCodeList</h1>
 <div class="container">
-  <a href="#" class="link"><img src="images/111.jpg"><span>人力资源部中银研修中心</span></a>
-  <a href="#" class="link"><img src="qrcode2.png"><span>Name 2</span></a>
-  <a href="#" class="link"><img src="qrcode3.png"><span>Name 3</span></a>
-  <a href="#" class="link"><img src="qrcode4.png"><span>Name 4</span></a>
-  <a href="#" class="link"><img src="qrcode5.png"><span>Name 5</span></a>
-  <a href="#" class="link"><img src="qrcode6.png"><span>Name 6</span></a>
-  <a href="#" class="link"><img src="qrcode7.png"><span>Name 7</span></a>
-  <a href="#" class="link"><img src="qrcode8.png"><span>Name 8</span></a>
-  <a href="#" class="link"><img src="qrcode9.png"><span>Name 9</span></a>
-  <a href="#" class="link"><img src="qrcode10.png"><span>Name 10</span></a>
-  <a href="#" class="link"><img src="qrcode11.png"><span>Name 11</span></a>
-  <a href="#" class="link"><img src="qrcode12.png"><span>Name 12</span></a>
-  <a href="#" class="link"><img src="qrcode13.png"><span>Name 13</span></a>
-  <a href="#" class="link"><img src="qrcode14.png"><span>Name 14</span></a>
-  <a href="#" class="link"><img src="qrcode15.png"><span>Name 15</span></a>
-  <a href="#" class="link"><img src="qrcode16.png"><span>Name 16</span></a>
-  <a href="#" class="link"><img src="qrcode17.png"><span>Name 17</span></a>
-  <a href="#" class="link"><img src="qrcode18.png"><span>Name 18</span></a>
-  <a href="#" class="link"><img src="qrcode19.png"><span>Name 19</span></a>
-  <a href="#" class="link"><img src="qrcode20.png"><span>Name 20</span></a>
-  <a href="#" class="link"><img src="qrcode21.png"><span>Name 21</span></a>
-  <a href="#" class="link"><img src="qrcode22.png"><span>Name 22</span></a>
-  <a href="#" class="link"><img src="qrcode23.png"><span>Name 23</span></a>
-  <a href="#" class="link"><img src="qrcode24.png"><span>Name 24</span></a>
-  <a href="#" class="link"><img src="qrcode25.png"><span>Name 25</span></a>
-  <a href="#" class="link"><img src="qrcode26.png"><span>Name 26</span></a>
-  <a href="#" class="link"><img src="qrcode27.png"><span>Name 27</span></a>
-  <a href="#" class="link"><img src="qrcode28.png"><span>Name 28</span></a>
-  <a href="#" class="link"><img src="qrcode29.png"><span>Name 29</span></a>
-  <a href="#" class="link"><img src="qrcode30.png"><span>Name 30</span></a>
+
+  <!-- Add "data-lightbox" attribute to each link with the same value -->
+  <a href="qrcode1.png" class="link" data-lightbox="qrcodes"><img src="images/111.jpg"><span>人力资源部中银研修中心</span></a>
+  <a href="qrcode2.png" class="link" data-lightbox="qrcodes"><img src="qrcode2.png"><span>Name 2</span></a>
+  <a href="qrcode3.png" class="link" data-lightbox="qrcodes"><img src="qrcode3.png"><span>Name 3</span></a>
+  <a href="qrcode4.png" class="link" data-lightbox="qrcodes"><img src="qrcode4.png"><span>Name 4</span></a>
+  <a href="qrcode5.png" class="link" data-lightbox="qrcodes"><img src="qrcode5.png"><span>Name 5</span></a>
+  <a href="qrcode6.png" class="link" data-lightbox="qrcodes"><img src="qrcode6.png"><span>Name 6</span></a>
+  <a href="qrcode7.png" class="link" data-lightbox="qrcodes"><img src="qrcode7.png"><span>Name 7</span></a>
+  <a href="qrcode8.png" class="link" data-lightbox="qrcodes"><img src="qrcode8.png"><span>Name 8</span></a>
+  <a href="qrcode9.png" class="link" data-lightbox="qrcodes"><img src="qrcode9.png"><span>Name 9</span></a>
+  <a href="qrcode10.png" class="link" data-lightbox="qrcodes"><img src="qrcode10.png"><span>Name 10</span></a>
+  <a href="qrcode11.png" class="link" data-lightbox="qrcodes"><img src="qrcode11.png"><span>Name 11</span></a>
+  <a href="qrcode12.png" class="link" data-lightbox="qrcodes"><img src="qrcode12.png"><span>Name 12</span></a>
+  <a href="qrcode13.png" class="link" data-lightbox="qrcodes"><img src="qrcode13.png"><span>Name 13</span></a>
+  <a href="qrcode14.png" class="link" data-lightbox="qrcodes"><img src="qrcode14.png"><span>Name 14</span></a>
+  <a href="qrcode15.png" class="link" data-lightbox="qrcodes"><img src="qrcode15.png"><span>Name 15</span></a>
+  <a href="qrcode16.png" class="link" data-lightbox="qrcodes"><img src="qrcode16.png"><span>Name 16</span></a>
+  <a href="qrcode17.png" class="link" data-lightbox="qrcodes"><img src="qrcode17.png"><span>Name 17</span></a>
+  <a href="qrcode18.png" class="link" data-lightbox="qrcodes"><img src="qrcode18.png"><span>Name 18</span></a>
+  <a href="qrcode19.png" class="link" data-lightbox="qrcodes"><img src="qrcode19.png"><span>Name 19</span></a>
+  <a href="qrcode20.png" class="link" data-lightbox="qrcodes"><img src="qrcode20.png"><span>Name 20</span></a>
+  <a href="qrcode21.png" class="link" data-lightbox="qrcodes"><img src="qrcode21.png"><span>Name 21</span></a>
+  <a href="qrcode22.png" class="link" data-lightbox="qrcodes"><img src="qrcode22.png"><span>Name 22</span></a>
+  <a href="qrcode23.png" class="link" data-lightbox="qrcodes"><img src="qrcode23.png"><span>Name 23</span></a>
+  <a href="qrcode24.png" class="link" data-lightbox="qrcodes"><img src="qrcode24.png"><span>Name 24</span></a>
+  <a href="qrcode25.png" class="link" data-lightbox="qrcodes"><img src="qrcode25.png"><span>Name 25</span></a>
+  <a href="qrcode26.png" class="link" data-lightbox="qrcodes"><img src="qrcode26.png"><span>Name 26</span></a>
+  <a href="qrcode27.png" class="link" data-lightbox="qrcodes"><img src="qrcode27.png"><span>Name 27</span></a>
+  <a href="qrcode28.png" class="link" data-lightbox="qrcodes"><img src="qrcode28.png"><span>Name 28</span></a>
+  <a href="qrcode29.png" class="link" data-lightbox="qrcodes"><img src="qrcode29.png"><span>Name 29</span></a>
+  <a href="qrcode30.png" class="link" data-lightbox="qrcodes"><img src="qrcode30.png"><span>Name 30</span></a>
 </div>
+<!-- Add Lightbox2 library script -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 </body>
 </html>
