--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <div class="container">
 
   <!-- Add "data-lightbox" attribute to each link with the same value -->
-  <a href="qrcode1.png" class="link" data-lightbox="qrcodes"><img src="images/111.jpg"><span>人力资源部中银研修中心</span></a>
+  <a href="images/111.jpg" class="link" data-lightbox="qrcodes"><img src="images/111.jpg"><span>人力资源部中银研修中心</span></a>
   <a href="qrcode2.png" class="link" data-lightbox="qrcodes"><img src="qrcode2.png"><span>Name 2</span></a>
   <a href="qrcode3.png" class="link" data-lightbox="qrcodes"><img src="qrcode3.png"><span>Name 3</span></a>
   <a href="qrcode4.png" class="link" data-lightbox="qrcodes"><img src="qrcode4.png"><span>Name 4</span></a>
