--- a/index.html
+++ b/index.html
@@ -79,36 +79,47 @@
 <div class="container">
 
   <!-- Add "data-lightbox" attribute to each link with the same value -->
-  <a href="images/111.jpg" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
-  <a href="qrcode2.png" class="link" data-lightbox="qrcodes"><span>Name 2</span></a>
-  <a href="qrcode3.png" class="link" data-lightbox="qrcodes"><span>Name 3</span></a>
-  <a href="qrcode4.png" class="link" data-lightbox="qrcodes"><span>Name 4</span></a>
-  <a href="qrcode5.png" class="link" data-lightbox="qrcodes"><span>Name 5</span></a>
-  <a href="qrcode6.png" class="link" data-lightbox="qrcodes"><span>Name 6</span></a>
-  <a href="qrcode7.png" class="link" data-lightbox="qrcodes"><span>Name 7</span></a>
-  <a href="qrcode8.png" class="link" data-lightbox="qrcodes"><span>Name 8</span></a>
-  <a href="qrcode9.png" class="link" data-lightbox="qrcodes"><span>Name 9</span></a>
-  <a href="qrcode10.png" class="link" data-lightbox="qrcodes"><span>Name 10</span></a>
-  <a href="qrcode11.png" class="link" data-lightbox="qrcodes"><span>Name 11</span></a>
-  <a href="qrcode12.png" class="link" data-lightbox="qrcodes"><span>Name 12</span></a>
-  <a href="qrcode13.png" class="link" data-lightbox="qrcodes"><span>Name 13</span></a>
-  <a href="qrcode14.png" class="link" data-lightbox="qrcodes"><span>Name 14</span></a>
-  <a href="qrcode15.png" class="link" data-lightbox="qrcodes"><span>Name 15</span></a>
-  <a href="qrcode16.png" class="link" data-lightbox="qrcodes"><span>Name 16</span></a>
-  <a href="qrcode17.png" class="link" data-lightbox="qrcodes"><span>Name 17</span></a>
-  <a href="qrcode18.png" class="link" data-lightbox="qrcodes"><span>Name 18</span></a>
-  <a href="qrcode19.png" class="link" data-lightbox="qrcodes"><span>Name 19</span></a>
-  <a href="qrcode20.png" class="link" data-lightbox="qrcodes"><span>Name 20</span></a>
-  <a href="qrcode21.png" class="link" data-lightbox="qrcodes"><span>Name 21</span></a>
-  <a href="qrcode22.png" class="link" data-lightbox="qrcodes"><span>Name 22</span></a>
-  <a href="qrcode23.png" class="link" data-lightbox="qrcodes"><span>Name 23</span></a>
-  <a href="qrcode24.png" class="link" data-lightbox="qrcodes"><span>Name 24</span></a>
-  <a href="qrcode25.png" class="link" data-lightbox="qrcodes"><span>Name 25</span></a>
-  <a href="qrcode26.png" class="link" data-lightbox="qrcodes"><span>Name 26</span></a>
-  <a href="qrcode27.png" class="link" data-lightbox="qrcodes"><span>Name 27</span></a>
-  <a href="qrcode28.png" class="link" data-lightbox="qrcodes"><span>Name 28</span></a>
-  <a href="qrcode29.png" class="link" data-lightbox="qrcodes"><span>Name 29</span></a>
-  <a href="qrcode30.png" class="link" data-lightbox="qrcodes"><span>Name 30</span></a>
+  <a href="images/人力资源部中银研修中心.jpg" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
+  <a href="images/工会工作部.jpg" class="link" data-lightbox="qrcodes"><span>工会工作部</span></a>
+  <a href="images/党委宣传部.jpg" class="link" data-lightbox="qrcodes"><span>党委宣传部</span></a>
+  <a href="images/行长室.jpg" class="link" data-lightbox="qrcodes"><span>行长室</span></a>
+  <a href="images/总行交流.jpg" class="link" data-lightbox="qrcodes"><span>总行交流</span></a>
+  <a href="images/信息科技运营中心.jpg" class="link" data-lightbox="qrcodes"><span>信息科技运营中心</span></a>
+  <a href="images/上海研修院.jpg" class="link" data-lightbox="qrcodes"><span>上海研修院</span></a>
+  <a href="images/单证中心.jpg" class="link" data-lightbox="qrcodes"><span>单证中心</span></a>
+  <a href="images/风险管理部.jpg" class="link" data-lightbox="qrcodes"><span>风险管理部</span></a>
+  <a href="images/长三角金融研究院.jpg" class="link" data-lightbox="qrcodes"><span>长三角金融研究院</span></a>
+  <a href="images/银行卡部.jpg" class="link" data-lightbox="qrcodes"><span>银行卡部</span></a>
+  <a href="images/金融机构部.jpg" class="link" data-lightbox="qrcodes"><span>金融机构部</span></a>
+  <a href="images/金融市场部.jpg" class="link" data-lightbox="qrcodes"><span>金融市场部</span></a>
+  <a href="images/财务管理部.jpg" class="link" data-lightbox="qrcodes"><span>财务管理部</span></a>
+  <a href="images/行政事业机构部.jpg" class="link" data-lightbox="qrcodes"><span>行政事业机构部</span></a>
+  <a href="images/纪委办公室.jpg" class="link" data-lightbox="qrcodes"><span>纪委办公室</span></a>
+  <a href="images/私人银行部.jpg" class="link" data-lightbox="qrcodes"><span>私人银行部</span></a>
+  <a href="images/渠道与运营管理部.jpg" class="link" data-lightbox="qrcodes"><span>渠道与运营管理部</span></a>
+  <a href="images/消费金融部.jpg" class="link" data-lightbox="qrcodes"><span>消费金融部</span></a>
+  <a href="images/普惠金融事业部.jpg" class="link" data-lightbox="qrcodes"><span>普惠金融事业部</span></a>
+  <a href="images/支付清算部.jpg" class="link" data-lightbox="qrcodes"><span>支付清算部</span></a>
+  <a href="images/授信管理部.jpg" class="link" data-lightbox="qrcodes"><span>授信管理部</span></a>
+  <a href="images/投行资管部.jpg" class="link" data-lightbox="qrcodes"><span>投行资管部</span></a>
+  <a href="images/托管业务部.jpg" class="link" data-lightbox="qrcodes"><span>托管业务部</span></a>
+  <a href="images/工会.jpg" class="link" data-lightbox="qrcodes"><span>工会</span></a>
+  <a href="images/审计部上海分部.jpg" class="link" data-lightbox="qrcodes"><span>审计部上海分部</span></a>
+  <a href="images/培训中心.jpg" class="link" data-lightbox="qrcodes"><span>培训中心</span></a>
+  <a href="images/园区管理办公室.jpg" class="link" data-lightbox="qrcodes"><span>园区管理办公室</span></a>
+  <a href="images/后勤服务中心.jpg" class="link" data-lightbox="qrcodes"><span>后勤服务中心</span></a>
+  <a href="images/办公室.jpg" class="link" data-lightbox="qrcodes"><span>办公室</span></a>
+  <a href="images/出纳管理部.jpg" class="link" data-lightbox="qrcodes"><span>出纳管理部</span></a>
+  <a href="images/内控与法律合规部.jpg" class="link" data-lightbox="qrcodes"><span>内控与法律合规部</span></a>
+  <a href="images/党务工作部.jpg" class="link" data-lightbox="qrcodes"><span>党务工作部</span></a>
+  <a href="images/信息科技部.jpg" class="link" data-lightbox="qrcodes"><span>信息科技部</span></a>
+  <a href="images/人力资源部.jpg" class="link" data-lightbox="qrcodes"><span>人力资源部</span></a>
+  <a href="images/交易银行部.jpg" class="link" data-lightbox="qrcodes"><span>交易银行部</span></a>
+  <a href="images/个人数字金融部.jpg" class="link" data-lightbox="qrcodes"><span>个人数字金融部</span></a>
+  <a href="images/业务运营中心.jpg" class="link" data-lightbox="qrcodes"><span>业务运营中心</span></a>
+  <a href="images/战略客户部.jpg" class="link" data-lightbox="qrcodes"><span>战略客户部</span></a>
+  <a href="images/公司金融部.jpg" class="link" data-lightbox="qrcodes"><span>公司金融部</span></a>
+  <a href="images/安全保卫部.jpg" class="link" data-lightbox="qrcodes"><span>安全保卫部</span></a>
 </div>
 <!-- Add Lightbox2 library script -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
