--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>QRCodeList</title>
+  <title>中银保险微信拓宽活动二维码清单</title>
   <style>
     .body {
       font-family: "Arial Unicode MS", "Lucida Sans Unicode", sans-serif;
@@ -75,7 +75,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
 </head>
 <body>
-<h1>QRCodeList</h1>
+<h1>中银保险微信拓宽活动二维码清单</h1>
 <div class="container">
 
   <!-- Add "data-lightbox" attribute to each link with the same value -->
