--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 <div class="container">
 
   <!-- Add "data-lightbox" attribute to each link with the same value -->
-  <a href="images/人力资源部中银研修中心.jpg" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
-  <a href="images/工会工作部.jpg" class="link" data-lightbox="qrcodes"><span>工会工作部</span></a>
+  <a href="https://che-mobile.bocins.com/#/login" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
+  <a href="https://che-mobile.bocins.com/#/login" class="link" data-lightbox="qrcodes"><span>工会工作部</span></a>
   <a href="images/党委宣传部.jpg" class="link" data-lightbox="qrcodes"><span>党委宣传部</span></a>
   <a href="images/行长室.jpg" class="link" data-lightbox="qrcodes"><span>行长室</span></a>
   <a href="images/总行交流.jpg" class="link" data-lightbox="qrcodes"><span>总行交流</span></a>
