--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
 <div class="container">
 
   <!-- Add "data-lightbox" attribute to each link with the same value -->
-  <a href="https://che-mobile.bocins.com/#/login" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
-  <a href="https://che-mobile.bocins.com/#/login" class="link" data-lightbox="qrcodes"><span>工会工作部</span></a>
+  <a href="https://che-mobile.bocins.com/#/login?code=081K7r000833pQ1XSM200gbIT82K7r0W&userId=U22091409054588&qrCode=3120230724000001&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
+  <a href="https://che-mobile.bocins.com/#/login?code=051IXS000bFCoQ1Y07000NsHYB1IXS0u&userId=U22091409054588&qrCode=3120230727000041&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>工会工作部</span></a>
   <a href="images/党委宣传部.jpg" class="link" data-lightbox="qrcodes"><span>党委宣传部</span></a>
   <a href="images/行长室.jpg" class="link" data-lightbox="qrcodes"><span>行长室</span></a>
   <a href="images/总行交流.jpg" class="link" data-lightbox="qrcodes"><span>总行交流</span></a>
