--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>中银保险微信拓宽活动二维码清单</title>
+  <title>QRCodeList</title>
   <style>
     .body {
       font-family: "Arial Unicode MS", "Lucida Sans Unicode", sans-serif;
@@ -45,83 +45,39 @@
       width: 100%;
       max-width: 200px;
     }
-
-    .link span {
-      margin-top: 10px;
-      font-size: 18px;
-      font-weight: bold;
-    }
-
-    /* Lightbox styles */
-    .lightbox {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      z-index: 999;
-    }
-
-    .lightbox img {
-      max-width: 90%;
-      max-height: 90%;
-    }
   </style>
-  <!-- Lightbox2 library -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
 </head>
 <body>
-<h1>中银保险微信拓宽活动二维码清单</h1>
+<h1>QRCodeList</h1>
 <div class="container">
 
-  <!-- Add "data-lightbox" attribute to each link with the same value -->
-  <a href="https://che-mobile.bocins.com/#/login?code=081K7r000833pQ1XSM200gbIT82K7r0W&userId=U22091409054588&qrCode=3120230724000001&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
-  <a href="https://che-mobile.bocins.com/#/login?code=051IXS000bFCoQ1Y07000NsHYB1IXS0u&userId=U22091409054588&qrCode=3120230727000041&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>工会工作部</span></a>
-  <a href="images/党委宣传部.jpg" class="link" data-lightbox="qrcodes"><span>党委宣传部</span></a>
-  <a href="images/行长室.jpg" class="link" data-lightbox="qrcodes"><span>行长室</span></a>
-  <a href="images/总行交流.jpg" class="link" data-lightbox="qrcodes"><span>总行交流</span></a>
-  <a href="images/信息科技运营中心.jpg" class="link" data-lightbox="qrcodes"><span>信息科技运营中心</span></a>
-  <a href="images/上海研修院.jpg" class="link" data-lightbox="qrcodes"><span>上海研修院</span></a>
-  <a href="images/单证中心.jpg" class="link" data-lightbox="qrcodes"><span>单证中心</span></a>
-  <a href="images/风险管理部.jpg" class="link" data-lightbox="qrcodes"><span>风险管理部</span></a>
-  <a href="images/长三角金融研究院.jpg" class="link" data-lightbox="qrcodes"><span>长三角金融研究院</span></a>
-  <a href="images/银行卡部.jpg" class="link" data-lightbox="qrcodes"><span>银行卡部</span></a>
-  <a href="images/金融机构部.jpg" class="link" data-lightbox="qrcodes"><span>金融机构部</span></a>
-  <a href="images/金融市场部.jpg" class="link" data-lightbox="qrcodes"><span>金融市场部</span></a>
-  <a href="images/财务管理部.jpg" class="link" data-lightbox="qrcodes"><span>财务管理部</span></a>
-  <a href="images/行政事业机构部.jpg" class="link" data-lightbox="qrcodes"><span>行政事业机构部</span></a>
-  <a href="images/纪委办公室.jpg" class="link" data-lightbox="qrcodes"><span>纪委办公室</span></a>
-  <a href="images/私人银行部.jpg" class="link" data-lightbox="qrcodes"><span>私人银行部</span></a>
-  <a href="images/渠道与运营管理部.jpg" class="link" data-lightbox="qrcodes"><span>渠道与运营管理部</span></a>
-  <a href="images/消费金融部.jpg" class="link" data-lightbox="qrcodes"><span>消费金融部</span></a>
-  <a href="images/普惠金融事业部.jpg" class="link" data-lightbox="qrcodes"><span>普惠金融事业部</span></a>
-  <a href="images/支付清算部.jpg" class="link" data-lightbox="qrcodes"><span>支付清算部</span></a>
-  <a href="images/授信管理部.jpg" class="link" data-lightbox="qrcodes"><span>授信管理部</span></a>
-  <a href="images/投行资管部.jpg" class="link" data-lightbox="qrcodes"><span>投行资管部</span></a>
-  <a href="images/托管业务部.jpg" class="link" data-lightbox="qrcodes"><span>托管业务部</span></a>
-  <a href="images/工会.jpg" class="link" data-lightbox="qrcodes"><span>工会</span></a>
-  <a href="images/审计部上海分部.jpg" class="link" data-lightbox="qrcodes"><span>审计部上海分部</span></a>
-  <a href="images/培训中心.jpg" class="link" data-lightbox="qrcodes"><span>培训中心</span></a>
-  <a href="images/园区管理办公室.jpg" class="link" data-lightbox="qrcodes"><span>园区管理办公室</span></a>
-  <a href="images/后勤服务中心.jpg" class="link" data-lightbox="qrcodes"><span>后勤服务中心</span></a>
-  <a href="images/办公室.jpg" class="link" data-lightbox="qrcodes"><span>办公室</span></a>
-  <a href="images/出纳管理部.jpg" class="link" data-lightbox="qrcodes"><span>出纳管理部</span></a>
-  <a href="images/内控与法律合规部.jpg" class="link" data-lightbox="qrcodes"><span>内控与法律合规部</span></a>
-  <a href="images/党务工作部.jpg" class="link" data-lightbox="qrcodes"><span>党务工作部</span></a>
-  <a href="images/信息科技部.jpg" class="link" data-lightbox="qrcodes"><span>信息科技部</span></a>
-  <a href="images/人力资源部.jpg" class="link" data-lightbox="qrcodes"><span>人力资源部</span></a>
-  <a href="images/交易银行部.jpg" class="link" data-lightbox="qrcodes"><span>交易银行部</span></a>
-  <a href="images/个人数字金融部.jpg" class="link" data-lightbox="qrcodes"><span>个人数字金融部</span></a>
-  <a href="images/业务运营中心.jpg" class="link" data-lightbox="qrcodes"><span>业务运营中心</span></a>
-  <a href="images/战略客户部.jpg" class="link" data-lightbox="qrcodes"><span>战略客户部</span></a>
-  <a href="images/公司金融部.jpg" class="link" data-lightbox="qrcodes"><span>公司金融部</span></a>
-  <a href="images/安全保卫部.jpg" class="link" data-lightbox="qrcodes"><span>安全保卫部</span></a>
+  <!-- Add QR code scanner function to each link -->
+  <a href="https://che-mobile.bocins.com/#/login" class="link" onclick="scanQRCode(this.href); return false;"><span>人力资源部中银研修中心</span></a>
+  <a href="https://che-mobile.bocins.com/#/login" class="link" onclick="scanQRCode(this.href); return false;"><span>工会工作部</span></a>
+  <a href="images/党委宣传部.jpg" class="link" onclick="scanQRCode(this.href); return false;"><span>党委宣传部</span></a>
+  <!-- 省略部分链接 -->
+  <a href="images/安全保卫部.jpg" class="link" onclick="scanQRCode(this.href); return false;"><span>安全保卫部</span></a>
 </div>
-<!-- Add Lightbox2 library script -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+
+<!-- Add QR code scanner library script -->
+<script src="https://unpkg.com/@zxing/library@0.23.4/umd@es5/index.min.js"></script>
+
+<script>
+  // Define the function to scan QR code
+  function scanQRCode(url) {
+    // Create a new instance of the QR code scanner
+    const codeReader = new ZXing.BrowserQRCodeReader();
+
+    // Use the scanner to decode the QR code from the URL
+    codeReader.decodeFromUrl(url).then(result => {
+      // Redirect the user to the decoded URL
+      window.location.href = result.text;
+    }).catch(err => {
+      // Display an error message if the QR code cannot be decoded
+      console.error(err);
+      alert('Failed to scan QR code.');
+    });
+  }
+</script>
 </body>
 </html>
