--- a/index.html
+++ b/index.html
@@ -50,13 +50,10 @@
 <body>
 <h1>QRCodeList</h1>
 <div class="container">
-
   <!-- Add QR code scanner function to each link -->
-  <a href="#" class="link" onclick="scanQRCode('https://che-mobile.bocins.com/#/login'); return false;"><span>人力资源部中银研修中心</span></a>
-  <a href="#" class="link" onclick="scanQRCode('https://che-mobile.bocins.com/#/login'); return false;"><span>工会工作部</span></a>
-  <a href="#" class="link" onclick="scanQRCode('images/党委宣传部.jpg'); return false;"><span>党委宣传部</span></a>
-  <!-- 省略部分链接 -->
-  <a href="#" class="link" onclick="scanQRCode('images/安全保卫部.jpg'); return false;"><span>安全保卫部</span></a>
+  <a href="#" class="link" onclick="scanQRCode('党委宣传部.jpg'); return false;"><span>党委宣传部</span></a>
+  <!-- Add more links as needed -->
+  <a href="#" class="link" onclick="scanQRCode('安全保卫部.jpg'); return false;"><span>安全保卫部</span></a>
 </div>
 
 <!-- Add QR code scanner library script -->
@@ -64,19 +61,34 @@
 
 <script>
   // Define the function to scan QR code
-  function scanQRCode(url) {
-    // Create a new instance of the QR code scanner
-    const codeReader = new ZXing.BrowserQRCodeReader();
+  function scanQRCode(imageName) {
+    const imageUrl = `images/${imageName}`;
+    
+    // Create a new image element and set its source to the image URL
+    const image = new Image();
+    image.src = imageUrl;
 
-    // Use the scanner to decode the QR code from the URL
-    codeReader.decodeFromImageUrl(url).then(result => {
-      // Redirect the user to the decoded URL
-      window.location.href = result.text;
-    }).catch(err => {
-      // Display an error message if the QR code cannot be decoded
-      console.error(err);
-      alert('Failed to scan QR code.');
-    });
+    // Once the image has loaded, process it and decode the QR code
+    image.onload = function () {
+      // Create a new instance of the QR code scanner
+      const codeReader = new ZXing.BrowserQRCodeReader();
+
+      // Use the scanner to decode the QR code from the image
+      codeReader.decodeFromImageElement(image).then(result => {
+        // Redirect the user to the decoded URL
+        window.location.href = result.text;
+      }).catch(err => {
+        // Display an error message if the QR code cannot be decoded
+        console.error(err);
+        alert('Failed to scan QR code.');
+      });
+    };
+    
+    // Handle image loading error
+    image.onerror = function () {
+      console.error(`Failed to load image: ${imageUrl}`);
+      alert('Failed to load image for QR code scanning.');
+    };
   }
 </script>
 </body>
