--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <h1>QRCodeList</h1>
 <div class="container">
   <!-- Add "data-lightbox" attribute to each link with the same value -->
-  <a href="https://che-mobile.bocins.com/#/login?code=0613ttFa1WOZJF0SD6Ga1zIaFC03ttFZ&userId=U22091409054588&qrCode=3120230724000001&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
+  <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000042&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
   <a href="https://che-mobile.bocins.com/#/quotePrice" class="link" data-lightbox="qrcodes"><span>工会工作部</span></a>
   <a href="images/党委宣传部.jpg" class="link" data-lightbox="qrcodes"><span>党委宣传部</span></a>
   <a href="images/行长室.jpg" class="link" data-lightbox="qrcodes"><span>行长室</span></a>
