--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>QRCodeList</title>
+  <title>微信拓宽活动</title>
   <style>
-    .body {
+    body {
       font-family: "Arial Unicode MS", "Lucida Sans Unicode", sans-serif;
     }
     .container {
@@ -45,13 +45,23 @@
       width: 100%;
       max-width: 200px;
     }
+
+    h1 {
+      text-align: center;
+      font-size: 36px;
+      margin-bottom: 20px;
+    }
+
+    .link span {
+      font-size: 18px;
+    }
   </style>
 
-<!-- Lightbox2 library -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+  <!-- Lightbox2 library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
 </head>
 <body>
-<h1>QRCodeList</h1>
+<h1>微信拓宽活动</h1>
 <div class="container">
   <!-- Add "data-lightbox" attribute to each link with the same value -->
   <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000042&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
