--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <html>
 <head>
   <title>微信拓宽活动</title>
+  <meta charset="UTF-8">
   <style>
     body {
       font-family: "Arial Unicode MS", "Lucida Sans Unicode", sans-serif;
@@ -32,7 +33,7 @@
       align-items: center;
       text-align: center;
       width: 30%;
-      margin-bottom: 30px;
+      margin-bottom: 40px; /* Increase the spacing between each link */
       text-decoration: none;
       color: #333;
     }
@@ -48,12 +49,13 @@
 
     h1 {
       text-align: center;
-      font-size: 36px;
-      margin-bottom: 20px;
+      font-size: 48px; /* Increase the font size of the title */
+      margin-bottom: 40px; /* Increase the spacing below the title */
     }
 
     .link span {
-      font-size: 18px;
+      font-size: 24px; /* Increase the font size of the link text */
+      line-height: 1.5; /* Increase the line height for better spacing between lines */
     }
   </style>
 
@@ -109,5 +111,4 @@
 </div> <!-- Add Lightbox2 library script -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 </body>
-</html>
 
