--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     }
 
     .link span {
-      font-size: 24px; /* Increase the font size of the link text */
-      line-height: 1.5; /* Increase the line height for better spacing between lines */
+      font-size: 30px; /* Increase the font size of the link text */
+      line-height: 3px; /* Increase the line height for better spacing between lines */
     }
   </style>
 
@@ -111,4 +111,3 @@
 </div> <!-- Add Lightbox2 library script -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
 </body>
-
