--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>微信拓宽活动</title>
+  <title>微信拓客活动</title>
   <meta charset="UTF-8">
   <style>
     body {
@@ -63,7 +63,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
 </head>
 <body>
-<h1>微信拓宽活动</h1>
+<h1>微信拓客活动</h1>
 <div class="container">
   <!-- Add "data-lightbox" attribute to each link with the same value -->
   <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000042&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
