--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <style>
     body {
       font-family: "Arial Unicode MS", "Lucida Sans Unicode", sans-serif;
-      background-image: url('images/background.jpg');
+      background-image: url('images/background0.png');
     }
     .container {
       display: flex;
