--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
 *Description:
 *This is the main code of the QRCodeList website.
 * @Author hujiahao
-* @Create 2023/7/27
-* @Version 1.0
+* @Create 2023/8/1
+* @Version 3.0
 -->
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -16,7 +15,7 @@
   <style>
     body {
       font-family: "Arial Unicode MS", "Lucida Sans Unicode", sans-serif;
-      background-image: url('images/background0.png');
+      background-image: url('images/background.jpg');
     }
     .container {
       display: flex;
@@ -28,87 +27,174 @@
       padding: 20px;
     }
 
-    .link {
+    .link-container {
+      margin-bottom: 5%;
+      width: calc(31% - 20px);
+      height: 100px;
       display: flex;
-      flex-direction: column;
       align-items: center;
+    }
+
+    .link {
       text-align: center;
-      width: 31%;
-      margin-bottom: 100px; /* Increase the spacing between each link */
       text-decoration: none;
       color: #333;
-    }
-
-    .link:hover {
-      color: #007bff;
-    }
-
-    .link img {
+      display: inline-block;
+      padding: 10px;
+      background-color: #fff;
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+      border-radius: 8px;
       width: 100%;
-      max-width: 200px;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 48px; /* Increase the font size of the title */
-      margin-bottom: 100px; /* Increase the spacing below the title */
+      height: 60px;
+      padding-top: 12%;
     }
 
     .link span {
-      font-size: 28px; /* Increase the font size of the link text */
-      line-height: 28px; /* Increase the line height for better spacing between lines */
+
+      font-size: 30px;
+      line-height: 30px;
+      font-family: 华文行楷;
+      text-align: center;
     }
+    h1 {
+      text-align: center;
+      font-family: 幼圆;
+      font-size: 48px; /* Increase the font size of the title */
+      margin-bottom: 70px; /* Increase the spacing below the title */
+    }
+
   </style>
 
-  <!-- Lightbox2 library -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/css/lightbox.min.css">
+
 </head>
 <body>
 <h1>微信拓客活动</h1>
 <div class="container">
-  <!-- Add "data-lightbox" attribute to each link with the same value -->
-  <a href="images/人力资源部中银研修中心.jpg" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
-  <a href="images/工会工作部.jpg" class="link" data-lightbox="qrcodes"><span>工会工作部</span></a>
-  <a href="images/党委宣传部.jpg" class="link" data-lightbox="qrcodes"><span>党委宣传部</span></a>
-  <a href="images/行长室.jpg" class="link" data-lightbox="qrcodes"><span>行长室</span></a>
-  <a href="images/总行交流.jpg" class="link" data-lightbox="qrcodes"><span>总行交流</span></a>
-  <a href="images/信息科技运营中心.jpg" class="link" data-lightbox="qrcodes"><span>信息科技运营中心</span></a>
-  <a href="images/上海研修院.jpg" class="link" data-lightbox="qrcodes"><span>上海研修院</span></a>
-  <a href="images/单证中心.jpg" class="link" data-lightbox="qrcodes"><span>单证中心</span></a>
-  <a href="images/风险管理部.jpg" class="link" data-lightbox="qrcodes"><span>风险管理部</span></a>
-  <a href="images/长三角金融研究院.jpg" class="link" data-lightbox="qrcodes"><span>长三角金融研究院</span></a>
-  <a href="images/银行卡部.jpg" class="link" data-lightbox="qrcodes"><span>银行卡部</span></a>
-  <a href="images/金融机构部.jpg" class="link" data-lightbox="qrcodes"><span>金融机构部</span></a>
-  <a href="images/金融市场部.jpg" class="link" data-lightbox="qrcodes"><span>金融市场部</span></a>
-  <a href="images/财务管理部.jpg" class="link" data-lightbox="qrcodes"><span>财务管理部</span></a>
-  <a href="images/行政事业机构部.jpg" class="link" data-lightbox="qrcodes"><span>行政事业机构部</span></a>
-  <a href="images/纪委办公室.jpg" class="link" data-lightbox="qrcodes"><span>纪委办公室</span></a>
-  <a href="images/私人银行部.jpg" class="link" data-lightbox="qrcodes"><span>私人银行部</span></a>
-  <a href="images/渠道与运营管理部.jpg" class="link" data-lightbox="qrcodes"><span>渠道与运营管理部</span></a>
-  <a href="images/消费金融部.jpg" class="link" data-lightbox="qrcodes"><span>消费金融部</span></a>
-  <a href="images/普惠金融事业部.jpg" class="link" data-lightbox="qrcodes"><span>普惠金融事业部</span></a>
-  <a href="images/支付清算部.jpg" class="link" data-lightbox="qrcodes"><span>支付清算部</span></a>
-  <a href="images/授信管理部.jpg" class="link" data-lightbox="qrcodes"><span>授信管理部</span></a>
-  <a href="images/投行资管部.jpg" class="link" data-lightbox="qrcodes"><span>投行资管部</span></a>
-  <a href="images/托管业务部.jpg" class="link" data-lightbox="qrcodes"><span>托管业务部</span></a>
-  <a href="images/工会.jpg" class="link" data-lightbox="qrcodes"><span>工会</span></a>
-  <a href="images/审计部上海分部.jpg" class="link" data-lightbox="qrcodes"><span>审计部上海分部</span></a>
-  <a href="images/培训中心.jpg" class="link" data-lightbox="qrcodes"><span>培训中心</span></a>
-  <a href="images/园区管理办公室.jpg" class="link" data-lightbox="qrcodes"><span>园区管理办公室</span></a>
-  <a href="images/后勤服务中心.jpg" class="link" data-lightbox="qrcodes"><span>后勤服务中心</span></a>
-  <a href="images/办公室.jpg" class="link" data-lightbox="qrcodes"><span>办公室</span></a>
-  <a href="images/出纳管理部.jpg" class="link" data-lightbox="qrcodes"><span>出纳管理部</span></a>
-  <a href="images/内控与法律合规部.jpg" class="link" data-lightbox="qrcodes"><span>内控与法律合规部</span></a>
-  <a href="images/党务工作部.jpg" class="link" data-lightbox="qrcodes"><span>党务工作部</span></a>
-  <a href="images/信息科技部.jpg" class="link" data-lightbox="qrcodes"><span>信息科技部</span></a>
-  <a href="images/人力资源部.jpg" class="link" data-lightbox="qrcodes"><span>人力资源部</span></a>
-  <a href="images/交易银行部.jpg" class="link" data-lightbox="qrcodes"><span>交易银行部</span></a>
-  <a href="images/个人数字金融部.jpg" class="link" data-lightbox="qrcodes"><span>个人数字金融部</span></a>
-  <a href="images/业务运营中心.jpg" class="link" data-lightbox="qrcodes"><span>业务运营中心</span></a>
-  <a href="images/战略客户部.jpg" class="link" data-lightbox="qrcodes"><span>战略客户部</span></a>
-  <a href="images/公司金融部.jpg" class="link" data-lightbox="qrcodes"><span>公司金融部</span></a>
-  <a href="images/安全保卫部.jpg" class="link" data-lightbox="qrcodes"><span>安全保卫部</span></a>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000042&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000041&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>工会工作部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000040&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>党委宣传部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000039&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>行长室</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000038&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>总行交流</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000037&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>信息科技运营中心</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000036&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>上海研修院</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000035&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>单证中心</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000034&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>风险管理部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000033&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>长三角金融研究院</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000032&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>银行卡部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000031&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>金融机构部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000030&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>金融市场部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000029&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>财务管理部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000028&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>行政事业机构部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000027&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>纪委办公室</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000026&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>私人银行部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000025&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>渠道与运营管理部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000024&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>消费金融部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000023&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>普惠金融事业部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000022&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>支付清算部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000021&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>授信管理部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000020&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>投行资管部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000019&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>托管业务部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000018&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>工会</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000017&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>审计部上海分部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000016&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>培训中心</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000015&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>园区管理办公室</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000014&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>后勤服务中心</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000013&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>办公室</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000012&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>出纳管理部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000011&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>内控与法律合规部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000010&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>党务工作部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000009&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>信息科技部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000008&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>人力资源部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000007&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>交易银行部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000006&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>个人数字金融部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000005&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>业务运营中心</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000004&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>战略客户部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000003&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>公司金融部</span></a>
+  </div>
+  <div class="link-container">
+    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000002&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>安全保卫部</span></a>
+  </div>
 
-</div> <!-- Add Lightbox2 library script -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.3/js/lightbox.min.js"></script>
+</div>
+
 </body>
+</html>
