--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     .link-container {
       margin-bottom: 5%;
-      width: calc(31% - 20px);
+      width: calc(30% - 20px);
       height: 100px;
       display: flex;
       align-items: center;
@@ -41,7 +41,7 @@
       color: #333;
       display: inline-block;
       padding: 10px;
-      background-color: #fff;
+      background-color: rgba(255,255,255,0.5);
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
       width: 100%;
