--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       justify-content: space-between;
       align-items: center;
       max-width: 1000px;
-      margin: 0 auto;
+      margin-left: 10%;
+      margin: auto ;
       padding: 20px;
     }
 
