--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
       justify-content: space-between;
       align-items: center;
       max-width: 1000px;
-      margin-left: 10%;
+      margin-left: 5%;
+      margin-right: 5%;
       padding: 20px;
     }
 
