--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
       justify-content: space-between;
       align-items: center;
       max-width: 1000px;
-      margin-left: 5%;
-      margin-right: 5%;
+      margin:auto;
       padding: 20px;
     }
 
