--- a/index.html
+++ b/index.html
@@ -23,16 +23,13 @@
       justify-content: space-between;
       align-items: center;
       max-width: 1000px;
-      margin:auto;
+      margin: 0 auto;
       padding: 20px;
     }
 
     .link-container {
-      margin-bottom: 5%;
-      width: calc(30% - 20px);
-      height: 100px;
+      margin-bottom: 20px;
       display: flex;
-      align-items: center;
     }
 
     .link {
@@ -41,20 +38,18 @@
       color: #333;
       display: inline-block;
       padding: 10px;
-      background-color: rgba(255,255,255,0.5);
+      background-color: rgba(255,255,255,0.7);
       box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
       border-radius: 8px;
-      width: 100%;
-      height: 60px;
-      padding-top: 12%;
+      margin-right: 10px;
+      flex-grow: 1;
+      min-width: 150px;
     }
 
     .link span {
-
-      font-size: 30px;
-      line-height: 30px;
+      font-size: 28px;
+      line-height: 28px;
       font-family: 华文行楷;
-      text-align: center;
     }
     h1 {
       text-align: center;
