--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     }
 
     .link-container {
-      margin-bottom: 20px;
+      margin-bottom: 30px;
       display: flex;
     }
 
@@ -44,17 +44,22 @@
       margin-right: 10px;
       flex-grow: 1;
       min-width: 150px;
+      height: 70px;
+      padding-top: 12%;
+      padding-left: 28px;
+      padding-right: 28px;
     }
 
     .link span {
-      font-size: 28px;
-      line-height: 28px;
+      font-size: 40px;
+      line-height: 40px;
       font-family: 华文行楷;
+      margin-top: 100px;
     }
     h1 {
       text-align: center;
       font-family: 幼圆;
-      font-size: 48px; /* Increase the font size of the title */
+      font-size: 50px; /* Increase the font size of the title */
       margin-bottom: 70px; /* Increase the spacing below the title */
     }
 
