--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     .container {
       display: flex;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: space-around;
       align-items: center;
       max-width: 1000px;
       margin: 0 auto;
