--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="UTF-8">
   <style>
     body {
-      background-image: url('images/background.jpg');
+      background-image: url('images/back.jpg');
       font-family: "Microsoft YaHei", "PingFang SC", "-apple-system", "Helvetica Neue", Helvetica, Tahoma, Arial, sans-serif;
     }
     .container {
@@ -68,7 +68,6 @@
 
 </head>
 <body>
-<h1>微信拓客活动</h1>
 <div class="container">
   <div class="link-container">
     <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000002&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>安全保卫部</span></a>
