--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta charset="UTF-8">
   <style>
     body {
-      background-image: url('images/background.jpg');
+      background-image: url('images/background0.jpg');
       font-family: "Microsoft YaHei", "PingFang SC", "-apple-system", "Helvetica Neue", Helvetica, Tahoma, Arial, sans-serif;
     }
     .container {
