--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>微信通讯录</title>
+  <title>部门列表</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
-  <h1>微信通讯录</h1>
-  <input type="text" id="searchInput" placeholder="搜索联系人...">
+  <h1></h1>
+  <input type="text" id="searchInput" placeholder="搜索部门...">
   <ul id="contactList">
     <!-- 这里的内容将由JavaScript动态生成 -->
   </ul>
